--- a/css/styles.css
+++ b/css/styles.css
@@ -328,15 +328,41 @@ body, html {
 }
 
 /* line 14, ../sass/partials/_modules.scss */
+.navbar-logo {
+  height: 40px;
+}
+
+/* line 19, ../sass/partials/_modules.scss */
 .privacy-s1 {
   background-position-x: right !important;
 }
 
-/* line 20, ../sass/partials/_modules.scss */
+/* line 24, ../sass/partials/_modules.scss */
 .text-shadow {
   text-shadow: 1px 1px 3px #333;
 }
-/* line 23, ../sass/partials/_modules.scss */
+/* line 27, ../sass/partials/_modules.scss */
 .text-yellow {
   color: #ffc81b !important;
+}
+
+/* line 31, ../sass/partials/_modules.scss */
+header {
+  z-index: 10;
+}
+
+/* line 34, ../sass/partials/_modules.scss */
+textarea {
+  resize: none;
+}
+
+@media all and (max-width: 767px) {
+  /* line 39, ../sass/partials/_modules.scss */
+  .navbar-nav {
+    backdrop-filter: blur(5px);
+    background-color: #fff;
+    border: 1px solid #999;
+    opacity: 0.9;
+    padding: 10px;
+  }
 }
